@@ -2,11 +2,14 @@ from OFS.ObjectManager import ObjectManager
 
 ADD_PLONE_SITE_HTML = '''
 <dtml-if "_.len(this().getPhysicalPath()) == 1">
-  <!-- Add Plone site button-->
-  <form action="&dtml-URL1;/" method="get" style="text-align: right; margin-top:0.5em; margin-bottom:0em">
-    <input type="hidden" name=":method" value="manage_addProduct/CMFPlone/addPloneSiteForm" />
-    <input class="form-element" type="submit" name="submit" value="Add Plone Site" />
-  </form>
+  <!-- Add Plone site action-->
+  <div style="text-align: right; margin-top:0.5em; margin-bottom:0em;
+              font-size: 120%; text-decoration: underline;
+  ">
+  <a href="&dtml-URL1;/?%3Amethod=manage_addProduct%2FCMFPlone%2FaddPloneSiteForm&submit=Add+Plone+Site"
+     target="_top">
+    Add Plone Site
+  </a></div>
 </dtml-if>
 '''
 
